--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="/"/>
 <meta property="og:image" content="https://financial.pstatic.net/insurance/insurance_car.png"/>
-<meta name="description" content="" />
-<meta property="og:description" content=""/>
-<meta itemprop="description" content="" />
-<meta name="twitter:description" content=""/>
+<meta name="description" content="자동차보험다이렉트비교견적사이트의 쉬운 비교 시스템으로 복잡했던 보험료와 보장을 한눈에 확인하고 최대 혜택으로 가입하세요." />
+<meta property="og:description" content="자동차보험다이렉트비교견적사이트의 쉬운 비교 시스템으로 복잡했던 보험료와 보장을 한눈에 확인하고 최대 혜택으로 가입하세요."/>
+<meta itemprop="description" content="자동차보험다이렉트비교견적사이트의 쉬운 비교 시스템으로 복잡했던 보험료와 보장을 한눈에 확인하고 최대 혜택으로 가입하세요." />
+<meta name="twitter:description" content="자동차보험다이렉트비교견적사이트의 쉬운 비교 시스템으로 복잡했던 보험료와 보장을 한눈에 확인하고 최대 혜택으로 가입하세요."/>
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="자동차보험다이렉트비교견적사이트, 쉬운 비교로 최대 혜택 누리자!"/>
 <meta name="twitter:url" content="/"/>
@@ -809,4 +809,5 @@
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4is0w4/yb/l/ko_KR/rFkiMP1qMyJ.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4is0w4/yb/l/ko_KR/rFkiMP1qMyJ.js" data-bootloader-hash="mgYHw9T" async="1" crossorigin="anonymous" data-p=":160" data-btmanifest="1027280358_main" data-c="1"></script>
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4iT4H4/yV/l/ko_KR/zWc0yd6V0XD.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4iT4H4/yV/l/ko_KR/zWc0yd6V0XD.js" data-bootloader-hash="cDTWgQH" async="1" crossorigin="anonymous" data-p=":139" data-btmanifest="1027280358_main" data-c="1"></script>
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" data-bootloader-hash="qgmbN7Z" async="1" crossorigin="anonymous" data-p=":74" data-btmanifest="1027280358_main" data-c="1"></script>
+
 
