--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <meta name="twitter:title" content="자동차보험다이렉트비교견적사이트, 쉬운 비교로 최대 혜택 누리자!"/>
 <meta name="twitter:url" content="/"/>
 <meta name="twitter:image" content="https://financial.pstatic.net/insurance/insurance_car.png"/>
-
-
+<meta name="google-site-verification" content="wbH8cHTRZiLYoT8b2Ua9RxOn-Pacu1g15qAtGPcVAK8" />
+<meta name="naver-site-verification" content="0bcee744565bbfda8eef4aabe491e5be7af97e2e" />
 
 <meta name="subject" content="자동차보험다이렉트비교견적사이트, 쉬운 비교로 최대 혜택 누리자!" />
 <meta name="publisher" content="자동차보험다이렉트비교견적사이트, 쉬운 비교로 최대 혜택 누리자!" />
@@ -809,5 +809,6 @@
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4is0w4/yb/l/ko_KR/rFkiMP1qMyJ.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4is0w4/yb/l/ko_KR/rFkiMP1qMyJ.js" data-bootloader-hash="mgYHw9T" async="1" crossorigin="anonymous" data-p=":160" data-btmanifest="1027280358_main" data-c="1"></script>
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4iT4H4/yV/l/ko_KR/zWc0yd6V0XD.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4iT4H4/yV/l/ko_KR/zWc0yd6V0XD.js" data-bootloader-hash="cDTWgQH" async="1" crossorigin="anonymous" data-p=":139" data-btmanifest="1027280358_main" data-c="1"></script>
 <link rel="preload" href="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" as="script" crossorigin="anonymous" nonce="2Mv94Jjk" /><script src="https://static.cdninstagram.com/rsrc.php/v4/yY/r/Eil-fzuGz0e.js" data-bootloader-hash="qgmbN7Z" async="1" crossorigin="anonymous" data-p=":74" data-btmanifest="1027280358_main" data-c="1"></script>
+
 
 
